# gomobiletest

./: .envrc  LICENSE  README.md  Readme.md
apps/android/GoMobileTester/: settings.gradle.kts
apps/android/GoMobileTester/app/: build.gradle.kts
apps/android/GoMobileTester/app/src/androidTest/java/com/example/gomobiletester/: ExampleInstrumentedTest.kt
apps/android/GoMobileTester/app/src/main/: AndroidManifest.xml
apps/android/GoMobileTester/app/src/main/java/com/example/gomobiletester/: KtIdentity.kt  KtPrinter.kt  MainActivity.kt
apps/android/GoMobileTester/app/src/main/java/com/example/gomobiletester/ui/theme/: Color.kt  Theme.kt  Type.kt
apps/android/GoMobileTester/app/src/main/res/values/: strings.xml  themes.xml
apps/android/GoMobileTester/app/src/test/java/com/example/gomobiletester/: ExampleUnitTest.kt
apps/android/GoMobileTester/gradle/wrapper/: gradle-wrapper.properties
apps/android/GoMobileTester/nativelib/: build.gradle.kts
apps/apple/GoMobileTester/GoMobileTester/: ContentView.swift  GoMobileTesterApp.swift  SwiftIdentity.swift  SwiftPrinter.swift
apps/apple/GoMobileTester/GoMobileTester.xcodeproj/: project.pbxproj
apps/apple/GoMobileTester/GoMobileTester.xcodeproj/project.xcworkspace/xcuserdata/mevan.xcuserdatad/: UserInterfaceState.xcuserstate
apps/apple/GoMobileTester/GoMobileTester.xcodeproj/xcuserdata/mevan.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
apps/apple/GoMobileTester/GoMobileTester.xcodeproj/xcuserdata/mevan.xcuserdatad/xcschemes/: xcschememanagement.plist
apps/flutter/go_mobile_tester/: .gitignore  README.md  pubspec.yaml
apps/flutter/go_mobile_tester/android/app/: build.gradle
apps/flutter/go_mobile_tester/android/app/src/main/: AndroidManifest.xml
apps/flutter/go_mobile_tester/android/app/src/main/kotlin/com/example/go_mobile_tester/: MainActivity.kt
apps/flutter/go_mobile_tester/ios/Runner/: BuildConfig.xcconfig  Info.plist
apps/flutter/go_mobile_tester/ios/Runner.xcodeproj/: project.pbxproj
apps/flutter/go_mobile_tester/lib/: app_auth.dart  app_layout.dart  app_state.dart  home_page.dart  login_page.dart  main.dart
apps/flutter/go_mobile_tester/lib/screens/: app_auth.dart  app_layout.dart  home_page.dart  login_page.dart  profile_view.dart
apps/flutter/go_mobile_tester/lib/services/: greeter_service.dart  login_service.dart
apps/flutter/go_mobile_tester/lib/state/: app_state.dart
apps/flutter/go_mobile_tester/lib/utility/: error.dart  message.dart
apps/flutter/go_mobile_tester/linux/: CMakeLists.txt  my_application.cc
apps/flutter/go_mobile_tester/linux/flutter/: generated_plugins.cmake
apps/flutter/go_mobile_tester/macos/Runner/: BuildConfig.xcconfig
apps/flutter/go_mobile_tester/macos/Runner.xcodeproj/: project.pbxproj
apps/flutter/go_mobile_tester/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
apps/flutter/go_mobile_tester/macos/Runner/Configs/: AppInfo.xcconfig
apps/flutter/go_mobile_tester/test/: widget_test.dart
apps/flutter/go_mobile_tester/web/: index.html  manifest.json
apps/flutter/go_mobile_tester/windows/: CMakeLists.txt
apps/flutter/go_mobile_tester/windows/flutter/: generated_plugins.cmake
apps/flutter/go_mobile_tester/windows/runner/: Runner.rc  main.cpp
common/go/: go.mod
common/go/error/: error.go
common/go/greeter/: greeter.go
common/go/person/: person.go
common/go/sum/: sum.go
shared/android/: User.aar
shared/apple/User.xcframework/: Info.plist
shared/apple/User.xcframework/ios-arm64/User.framework/: User
shared/apple/User.xcframework/ios-arm64/User.framework/Versions/A/: User
shared/apple/User.xcframework/ios-arm64/User.framework/Versions/A/Headers/: Greeter.objc.h
shared/apple/User.xcframework/ios-arm64_x86_64-simulator/User.framework/Versions/A/: User
shared/apple/User.xcframework/macos-arm64_x86_64/User.framework/Versions/A/: User
shared/apple/User.xcframework/macos-arm64_x86_64/User.framework/Versions/A/Headers/: Person.objc.h  User.h
shared/apple/User.xcframework/macos-arm64_x86_64/User.framework/Versions/A/Modules/: module.modulemap
shared/flutter/ffi_helper/: pubspec.yaml
shared/flutter/ffi_helper/lib/: async_runner.dart  ffi_helper.dart  foreign_instance_stub.dart  foreign_interface_skel.dart
shared/flutter/ffi_helper/test/: ffi_helper_test.dart
shared/flutter/user/: .gitignore  README.md  ffigen.yaml  pubspec.yaml
shared/flutter/user/android/: build.gradle
shared/flutter/user/android/src/main/: AndroidManifest.xml
shared/flutter/user/go/: go.mod  greeter.go  person.go
shared/flutter/user/ios/: user.podspec
shared/flutter/user/ios/Classes/: user.c
shared/flutter/user/lib/: async_runner.dart  error.dart  foreign_instance_stub.dart  foreign_interface_skel.dart  greeter.dart  identity.dart  person.dart  printer.dart  sum_callback_example.dart  sum_example.dart  user.dart  user_bindings.dart  user_bindings_generated.dart
shared/flutter/user/linux/: CMakeLists.txt
shared/flutter/user/macos/: user.podspec
shared/flutter/user/src/: CMakeLists.txt  common.h  error.h  greeter.h  identity.h  person.h  printer.h  user.c  user.h
shared/flutter/user/src/go/: clangwrap-android.sh  clangwrap-ios.sh  error.go  go.mod  greeter.go  identity.go  person.go  printer.go
shared/flutter/user/test/: build_test_lib.dart  user_test.dart
shared/flutter/user/windows/: CMakeLists.txt
